<resources>
    <string name="app_name">RecuperApp</string>

    <!-- Login & CrearUsuario -->
    <string name="prompt_usuario">Cedula</string>
    <string name="prompt_contrasena">Contraseña </string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_email_invalido">Ingrese un correo valido</string>
    <string name="error_contrasena_incorrecta">Contraseña erronea</string>
    <string name="error_contrasenas_diferentes">Contraseñas deben ser iguales</string>
    <string name="error_campo_requirido">Por favor diligencie este campo</string>
    <string name="telefono">5946161 ext 2905 - 2900</string>
    <string name="direccion">Carrera 7 # 40 - 61</string>
    <string name="recuperapp">RecuperApp</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_label">Login</string>

    <!-- Menu -->
    <string name="funcionalidad">Funcionalidad</string>
    <string name="descripcion">Descripción</string>

    <!-- Fisiologico -->
    <string name="medicion">Medición</string>
    <string name="unidades">Unidades</string>
    <string name="ingresar">Ingresar</string>
    <string name="reomendaciones_alimento">Evite alimentos con altos contenidos en sal cómo: \n - Atún
        \n - Sardinas \n - papas fritas</string>

    <!-- Caminata -->
    <string name="caminata">Caminar</string>
    <string name="empezar_caminata">Presione\n para \nempezar</string>
    <string name="terminar_caminata">Presione\n para \nterminar</string>
    <string name="finalizar_caminata">Presione\n para \nfinalizar</string>
    <string name="pasos">Pasos</string>
    <string name="segundos">Segundos</string>
    <string name="metros">Metros</string>

    <!-- Pedometer -->
    <string name="started">Pedometer started.</string>
    <string name="stopped">Pedometer stopped.</string>

    <!-- Prefences -->
    <string name="titulo_settins_caminatas">Ajustes de Caminatas</string>
    <string name="sensibilidad_setting">Sensibilidad</string>
    <string name="sensibilidad_setting_detalle">Calibrar el detector de pasos</string>
    <string name="sensitivity_preference">bfadzxh</string>
    <string name="sensitivity_preference_values">adhfzbx</string>
    <string name="sensibilidad_setting_titulo">Seleccióne el nivel de sensibilidad</string>

    <string name="forzar_operacion_setting">Forzar Operacion de Android</string>
    <string name="forzar_operacion_setting_detalles">Algunas versiones de Android impiden el uso de sensores cualdo la pantalla está apagada; seleccióne el nivel de forzamiento del OS</string>
    <string name="operation_level_preference">DXbvd</string>
    <string name="operation_level_preference_values">dgxcv</string>
    <string name="forzar_operacion_setting_titulo">Seleccione el nivel de forzamiento</string>

    <string name="longitud_paso_setting">Longitud de paso</string>
    <string name="longitud_paso_setting_detalle">Para el calculo aproximado de distancias, se necesita la longitud promedio de los pasos</string>
    <string name="longitud_paso_setting_titulo">Ingrese su longitud de paso en cm</string>

    <!-- Prefences Array sensitivity_preference -->
    <string name="extra_high">extra high</string>
    <string name="very_high">very high</string>
    <string name="high">high</string>
    <string name="higher">higher</string>
    <string name="medium">medium</string>
    <string name="lower">lower</string>
    <string name="low">low</string>
    <string name="very_low">very low</string>
    <string name="extra_low">extra low</string>

    <!-- Prefences Array operation_level_preference & operation_level_preference_values -->
    <string name="run_in_background">Normal (just try running in background)</string>
    <string name="keep_screen_on">Screen on (keep screen dim)</string>
    <string name="wake_up">Aggressive (wake up when I turn screen off)</string>

    <!-- Actionbar -->
    <string name="actionbar_settings">Ajustes</string>
    <string name="actionbar_usuario">Nombre</string>

    <!-- Citas -->
    <string name="citas_nueva_cita_boton">Recordar Cita</string>
    <string name="citas_fecha_titulo_texto">Fecha</string>
    <string name="citas_medico_titulo_texto">Cita con</string>
    <string name="citas_intrsucciones">Ingresa tus futuras cítas médicas para recordartelas
        con 1 día de anticipación, presiona el botón recordar cita si tienes alguna pendiente</string>

    <!-- Cita item -->
    <string name="cita_fecha_texto">Fecha</string>
    <string name="cita_medico_texto">Medico</string>
    <string name="cita_hora_texto">Hora</string>
    <string name="error_campo_numerico">Debe ser un número</string>
    <string name="ajustes_caminata">Ajustes</string>
    <string name="sintoma">Síntoma</string>
    <string name="descripcion_sintoma">Descripción del Síntoma</string>
    <string name="animo">Ingresa tu estado de ánimo</string>

    <!-- Medicamentos -->
    <string name="medicamentos_evitar">Recuerde que debe evitar los siguientes medicamentos:\n-Ibuprofeno
        \n-Aspirina \n-Medicamentos con sodio</string>
    <string name="medicamento_intrucciones">Asigna alarmas a cada medicamento para recordarte
        cuando tomarlos (presionalos sostenidamente)</string>

</resources>
