<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grisOscuro">

    <Button
        android:text="@string/ajustes_caminata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        app:layout_constraintBottom_toTopOf="@+id/guideline20"
        android:layout_marginBottom="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/ajustes_caminata_button" />

    <TextView
        android:text="@string/pasos"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/grisClaro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pasos_texto"
        app:layout_constraintRight_toLeftOf="@+id/guideline14"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/pasos_dato_texto"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        android:layout_marginBottom="8dp" />

    <TextView
        android:text="@string/metros"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/grisClaro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/distancia_texto"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        android:layout_marginBottom="8dp" />

    <TextView
        android:text="@string/segundos"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/grisClaro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tiempo_texto"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline15"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/tiempo_dato_texto"
        android:layout_marginLeft="8dp" />

    <Button
        android:text="@string/empezar_caminata"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/rojoClaro"
        android:background="@drawable/estilo_boton_redondo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/empezar_caminata_button"
        app:layout_constraintLeft_toLeftOf="@+id/guideline14"
        app:layout_constraintRight_toLeftOf="@+id/guideline15"
        app:layout_constraintTop_toTopOf="@+id/guideline12"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        />

    <Button
        android:text="@string/terminar_caminata"
        android:visibility="gone"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/grisOscuro"
        android:background="@drawable/estilo_boton_redondo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/terminar_caminata_button"
        app:layout_constraintLeft_toLeftOf="@+id/guideline14"
        app:layout_constraintRight_toLeftOf="@+id/guideline15"
        app:layout_constraintTop_toTopOf="@+id/guideline12"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        />

    <Button
        android:text="@string/finalizar_caminata"
        android:visibility="gone"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/grisOscuro"
        android:background="@drawable/estilo_boton_redondo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/finalizar_caminata_button"
        app:layout_constraintLeft_toLeftOf="@+id/guideline14"
        app:layout_constraintRight_toLeftOf="@+id/guideline15"
        app:layout_constraintTop_toTopOf="@+id/guideline12"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline10"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintGuide_percent="0.5029354" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reloj_imagen"
        app:layout_constraintBottom_toTopOf="@+id/tiempo_texto"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="@+id/guideline13"
        app:layout_constraintRight_toLeftOf="@+id/guideline15"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline14"
        android:background="@drawable/ic_action_alarm" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pasos_imagen"
        app:layout_constraintTop_toTopOf="@+id/guideline12"
        app:layout_constraintBottom_toTopOf="@+id/pasos_texto"
        android:layout_marginBottom="8dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline14"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:background="@drawable/ic_corazon" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/metros_imagen"
        app:layout_constraintTop_toTopOf="@+id/guideline12"
        app:layout_constraintBottom_toTopOf="@+id/distancia_texto"
        app:layout_constraintLeft_toLeftOf="@+id/guideline15"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:background="@drawable/ic_maps_directions_walk" />

    <TextView
        android:text="0"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/grisClaro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tiempo_dato_texto"
        app:layout_constraintTop_toTopOf="@+id/tiempo_texto"
        app:layout_constraintLeft_toLeftOf="@+id/guideline14" />

    <TextView
        android:text="0"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/grisClaro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pasos_dato_texto"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="@+id/pasos_texto" />

    <TextView
        android:text="0"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/grisClaro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/distancia_dato_texto"
        app:layout_constraintLeft_toLeftOf="@+id/guideline15"
        app:layout_constraintRight_toLeftOf="@+id/distancia_texto"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="@+id/distancia_texto" />

    <TextView
        android:text="@string/caminata"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/blanco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/caminata_titulo_texto"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        app:layout_constraintBottom_toTopOf="@+id/guideline12"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline12"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60078275"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline13"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.853229"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline14"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintGuide_end="251dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline15"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintGuide_end="106dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline20"
        app:layout_constraintGuide_percent="0.25"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"
        android:orientation="horizontal" />

</android.support.constraint.ConstraintLayout>
